tests/snapshots/compile__wgsl_math_threshold_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_rgba6_a: f32,
    u_control_rgba6_b: f32,
    u_control_rgba6_g: f32,
    u_control_vignette3_radius: f32,
    u_control_vignette3_softness: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn mathEased(x: f32, e0: f32, e1: f32) -> f32 {
    if (e1 - e0 < 1e-5) { return select(1.0, 0.0, x < e0); }
    return smoothstep(e0, e1, x);
}

fn vignette3_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette3_radius;
    let softness = max(u.u_control_vignette3_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn threshold1_output(uv: vec2f) -> f32 {
    let t = vignette4_mask(uv);
    let s = abs(vignette5_mask(uv));
    return mathEased(vignette3_mask(uv), t - s, t + s);
}

fn rgba6_output(uv: vec2f) -> vec4f {
    return vec4f(threshold1_output(uv), u.u_control_rgba6_g, u.u_control_rgba6_b, u.u_control_rgba6_a);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rgba6_output(uv);
}
