tests/snapshots/compile__wgsl_output_output_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(2) var sampler_mirror_linear: sampler;
@group(0) @binding(3) var sampler_mirror_nearest: sampler;
@group(0) @binding(4) var sampler_repeat_linear: sampler;
@group(0) @binding(5) var sampler_repeat_nearest: sampler;
@group(0) @binding(6) var u_texture_output1_frame: texture_2d<f32>;

fn output1_frame(uv: vec2f) -> vec4f {
    let texSize = vec2f(textureDimensions(u_texture_output1_frame));
    let aspect = texSize.x / texSize.y;
    let t = vec2f((uv.x / aspect + 1.0) * 0.5, (uv.y + 1.0) * 0.5);
    return textureSampleLevel(u_texture_output1_frame, sampler_mirror_linear, t, 0.0);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return output1_frame(uv);
}
